--- a/src/Navigation.css
+++ b/src/Navigation.css
@@ -1,4 +1,4 @@
-.logo{
+/* .logo{
     font-size: 30px;
     color: #ffffff;
 }
@@ -24,4 +24,75 @@ nav ul li{
 nav ul li a{
     text-decoration: none;
     color: white;
+} */
+
+
+.toolbar{
+    position:fixed;
+    width: 55px;
+    height: 55px;
+    background-color: #009FAA; 
+    border-radius: 50%;
+
+    /* padding: 1rem 1rem; */
+    top:20px;
+    left:20px;
+    box-shadow: .5rem .5rem 3rem rgba(0,0,0,0.2);
+    z-index:1000;
 }
+
+/* .toolbar_logo a{
+    color: white;
+    text-decoration: none;
+    font-size: 1.5rem;
+} */
+
+.toolbar_navigation {
+    display:flex;
+    height:100%;
+    /* padding: 1rem 1rem; */
+    align-items: center;
+}
+
+.toolbar_circle{
+    background-color:#009FAA;
+    width: 60px;
+    height: 60px;
+    /* display: inline-block; */
+    border-radius: 50%;
+    color: #1d809f;
+    font-size: 36px;
+    /* line-height: 120px; */
+    box-shadow: 0px 5px 6px 1px rgba(0,0,0,20);
+}
+
+/* .toolbar_navigation-items a{
+    color:white;
+    text-decoration:none;
+} */
+
+/* .toolbar_navigation-items a:hover,
+.toolbar_navigation-items a:active{
+    color:orange;
+} */
+
+/* .toolbar_navigation-items ul{
+    list-style: none;
+    margin: 0;
+    padding:0;
+    display: flex;
+} */
+
+/* .toolbar_navigation-items li{
+    padding: 0 0.5rem;
+} */
+/* 
+.spacer{
+    flex: 1;
+} */
+
+.toolbar_logo{
+    margin-left: 1.5rem;
+    
+}
+
