--- a/src/Services.css
+++ b/src/Services.css
@@ -1,7 +1,7 @@
 .services{
-    background-color: #1d809f;
+    background-color: #444857;
     padding-top: 120px;
-    padding-bottom: 120pc;
+    padding-bottom: 120px;
     text-align: center;
 }
 
@@ -25,19 +25,35 @@
     justify-content: space-around;
 }
 
+/* .services > .row {
+    display: flex;
+    align-items: center;
+    align-content: center;
+    flex-direction: row;
+} */
+
+
 .services > .row h4{
     margin-bottom: 8px;
     font-family: inherit;
-    font-weight: 500;
+    font-weight: 700;
     line-height: 1.2;
     color: inherit;
     font-size: 24px;
     color:white;
 }
 
+.service-box{
+    width: 20rem;
+    /* display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center; */
+}
+
 .services > .row p{
     font-size: 16px;
-    color: white;
+    color: rgba(255, 255, 255, 0.8)
 
 }
 
@@ -54,4 +70,10 @@
     color: #1d809f;
     font-size: 36px;
     line-height: 120px;
+    box-shadow: 0px 5px 6px 1px rgba(0,0,0,20);
 }
+
+.ion1 {
+    font-size: 58px;
+    margin: 26px auto;
+  }
